# Shiinobi

./: .gitignore  .readthedocs.yml  README.md  cli.spec  pyproject.toml  requirements.txt  t  test.py
.github/workflows/: CI.yaml
docs/: api.md  conf.py  index.rst
shiinobi/builder/: genre.py
shiinobi/parser/: genre.py
shiinobi/utilities/: session.py
src/: cli.py
src/__pyinstaller/: hooks-selectolax.py
src/_pyinstaller/: hook-encodings.py
src/builder/myanimelist/: anime_demographics.py  manga_maganize.py
src/mixins/myanimelist/: __init__.py
src/shiinobi/: cli.py
src/shiinobi/builder/: anime.py  anime_demographics.py  anime_explicit_genres.py  anime_genres.py  anime_theme.py  character.py  staff.py  theme.py
src/shiinobi/builder/myanimelist/: __init__.py  anime.py  anime_all_genres.py  anime_demographics.py  anime_explicit_genres.py  anime_genres.py  anime_theme.py  character.py  manga.py  manga_all_genres.py  manga_demographics.py  manga_explicit_genres.py  manga_genres.py  manga_maganize.py  manga_theme.py  staff.py
src/shiinobi/builder/nhentai/: __init__.py
src/shiinobi/builder/nhentai_com/: __init__.py  comic.py
src/shiinobi/builder/nhentai_net/: __init__.py
src/shiinobi/constants/: __init__.py  session.py
src/shiinobi/constants/nhentai/: __init__.py  worker.py
src/shiinobi/decorators/: __init__.py  return_error_decorator.py
src/shiinobi/facades/: __init__.py  log.py  regex.py  string.py
src/shiinobi/mixins/: base.py  client.py
src/shiinobi/mixins/myanimelist/: __init__.py
src/shiinobi/mixins/nhentai/: __init__.py
src/shiinobi/mixins/nhentai_com/: __init__.py
src/shiinobi/mixins/nhentai_net/: __init__.py
src/shiinobi/mixins/parser/: base.py
src/shiinobi/parser/: anime.py  anime_character_and_staff_list.py  anime_genre.py  anime_producer.py  character.py  genre.py  producer.py  staff.py
src/shiinobi/parser/myanimelist/: __init__.py  anime.py  anime_character_and_staff_list.py  anime_genre.py  anime_producer.py  character.py  staff.py
src/shiinobi/utilities/: __init__.py  logger.py  regex.py  session.py  string.py
src/utilities/: session.py
tests/builder/: test_anime_builder.py  test_character_builder.py  test_genre_builder.py  test_theme_builder.py
tests/parser/: test_anime_character_and_staff_list.py  test_character_parser.py  test_genre_parser.py  test_producer_parser.py  test_staff_parser.py
