[project]
name = "shiinobi"
version = "0.0.1"
description = ""
authors = [
    { name = "baseplate-admin", email = "61817579+baseplate-admin@users.noreply.github.com" },
]
requires-python = ">=3.9,<3.14"
readme = "README.md"
license = "MIT"
maintainers = [
    { name = "baseplate-admin", email = "61817579+baseplate-admin@users.noreply.github.com" },
]
dependencies = [
    "selectolax>=0.3.27,<0.4",
    "requests-cache>=1.2.1,<2",
    "requests-ratelimiter>=0.7.0,<0.8",
    "python-dateutil>=2.9.0.post0",
    "pyinstaller-hooks-contrib~=2025.0",
    "cloudscraper>=1.2.71",
]

[dependency-groups]
cli = ["typer>=0.15.1,<0.16"]
docs = [
    "sphinx>=7.2.6,<8",
    "myst-parser>=2",
    "sphinx-reload>=0.2.0,<0.3",
    "shibuya>=2024.12.21,<2025",
]
dev = [
    "poethepoet>=0.32.1,<0.33",
    "ruff>=0.9.1,<0.13",
    "pyinstaller>=6.11.1,<7",
    "pillow>=11.1.0,<12",
    "mypy>=1.14.1,<2",
    "types-python-dateutil>=2.9.0.20241206,<3",
    "types-requests>=2.32.0.20241016,<3",
    "types-pyinstaller>=6.11.0.20241028,<7",
]

[tool.uv]
default-groups = ["cli", "docs", "dev"]

[tool.hatch.build.targets.sdist]
include = ["./src/shiinobi"]
# exclude = ["src/shiinobi/cli.py"]

[tool.hatch.build.targets.wheel]
include = ["./src/shiinobi"]
# exclude = ["src/shiinobi/cli.py"]

[tool.hatch.build.targets.wheel.sources]
"./src/shiinobi" = "shiinobi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poe.tasks]
"dev-cli" = "python ./src/cli.py"
"build-cli" = "pyinstaller ./cli.spec --clean"
