[project]
name = "shiinobi"
version = "0.0.1"
description = ""
authors = [
    { name = "baseplate-admin", email = "61817579+baseplate-admin@users.noreply.github.com" },
]
requires-python = ">=3.9,<3.14"
readme = "README.md"
license = "MIT"
maintainers = [
    { name = "baseplate-admin", email = "61817579+baseplate-admin@users.noreply.github.com" },
]
dependencies = [
    "selectolax>=0.3.27,<0.5",
    "requests-cache>=1.2.1,<2",
    "requests-ratelimiter>=0.8.0,<0.9",
    "python-dateutil>=2.9.0.post0",
    "pyinstaller-hooks-contrib~=2026.4",
    "cloudscraper>=1.2.71",
]

[dependency-groups]
cli = ["typer>=0.23.2,<0.24"]
docs = [
    "sphinx>=7.2.6,<8",
    "myst-parser>=3.0.1",
    "sphinx-reload>=0.2.0,<0.3",
    "shibuya>=2025.10.21,<2026",
]
dev = [
    "poethepoet>=0.37.0,<0.38",
    "ruff>=0.9.1,<0.16",
    "pyinstaller>=6.19.0,<7",
    "pillow>=11.1.0,<12",
    "mypy>=1.19.1,<2",
    "types-python-dateutil>=2.9.0.20260124,<3",
    "types-requests>=2.32.4.20260107,<3",
    "types-pyinstaller>=6.18.0.20260115,<7",
]

[tool.uv]
default-groups = ["cli", "docs", "dev"]

[tool.hatch.build.targets.sdist]
include = ["./src/shiinobi"]
# exclude = ["src/shiinobi/cli.py"]

[tool.hatch.build.targets.wheel]
include = ["./src/shiinobi"]
# exclude = ["src/shiinobi/cli.py"]

[tool.hatch.build.targets.wheel.sources]
"./src/shiinobi" = "shiinobi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poe.tasks]
"dev-cli" = "python ./src/cli.py"
"build-cli" = "pyinstaller ./cli.spec --clean"
